# DataEngineerIluma_Assesment

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  ingest_data.py  pyproject.toml
database/: Dockerfile
database/init_sql/: 01_create_3nf_db.sql
docs/: 01-PrerrequisiteAndInstructions.md  02-Checklist.md  03-ProjectStructure.md  04-DatabaseModelsAndDesign.md  05-ConceptualOlapModel.md
