[project]
name = "job-data-ingestion"
version = "0.1.0"
description = "Ingest job data into PostgreSQL"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "click>=8.1.7",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
